--- a/index.html
+++ b/index.html
@@ -5,25 +5,6 @@
     <title>Ahnis Personal Page</title>
 </head>
 <body>
-<table style="border: 1px solid wheat" >
-    <thead>
-    <tr>
-        <th>Dates</th>
-        <th> Work</th>
-    </tr>
-    </thead>
-   <tbody>
-   <tr>
-       <td> 2010-2013  </td>
-       <td> Lead Developer At tempo App</td>
-   </tr>
-   <tr>
-       <td> 2010 </td>
-       <td> Researcher at Institute of Cognitive</td>
-   </tr>
-   </tbody>
-    <tfoot></tfoot>
-</table>
-
+    <h1> Hello World </h1>
 </body>
 </html>
